DOC-2023: Added TINY-9466 to the release notes. (#2705)
* DOC-2023: Added TINY-9466 to the release notes.

* Update modules/ROOT/pages/6.5-release-notes.adoc

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>

* Edited to be in the Premium Plugin Changes section of the Release Notes.

---------

Co-authored-by: Hamza Benkhaldoun <hamza0867@gmail.com>
Co-authored-by: brian-forte <brian.forte@tiny.cloud>

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -955,6 +955,21 @@ To address this overflowing menu issue, {productname} 6.5 added support for the 
 Context menus and menu items are now constrained within the scrollable container if the editor’s root node is a parent of the Shadow host node.
 
 
+=== Case Change 2.0.2
+
+The {productname} 6.5 release includes an accompanying release of the **Case Change** premium plugin.
+
+**Case Change** 2.0.2 includes the following change.
+
+=== It was possible to apply case change to elements with a `contenteditable="false"` attribute set.
+//#TINY-9466
+
+Previously, the **Case Change** plugin could change the case of a selection inside an element with a `contenteditable="false"` attribute set.
+
+In **Case Change** 2.0.2, the Case Change toolbar button and menu items are disabled when the selection is in an element with a `contenteditable="false"` attribute set.
+
+For information on the **Case Change** plugin, see: xref:casechange.adoc[Case Change].
+
 [[security-fixes]]
 == Security fixes
 
