DOC-2017: Added TINY-9757 to the release notes. (#2711)
* DOC-2017: Added TINY-9757 to the release notes.

* Update modules/ROOT/pages/6.5-release-notes.adoc

---------

Co-authored-by: brian-forte <brian.forte@tiny.cloud>

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -437,6 +437,15 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following improvements:
 
+=== `DialogFooterToggleButton` icon prop is now optional
+//#TINY-9757
+
+Previously it was mandatory for the `DialogFooterToggleButton` to have an icon prop.
+
+Toggle buttons in dialog footers did not function without a displayed icon.
+
+As of {productname} 6.5 the icon prop is now optional and toggle buttons in dialog footers work with and without a displayed icon.
+
 === Translations added for Help text displayed at **Help > Help > Keyboard Navigation**.
 //#TINY-9633
 
