DOC-2072: update known issue count reference

--- a/modules/ROOT/pages/6.5.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.5.1-release-notes.adoc
@@ -992,7 +992,7 @@ For information on the **Case Change** plugin, see: xref:casechange.adoc[Case Ch
 
 This section describes issues that users of {productname} 6.5.1 may encounter and possible workarounds for these issues.
 
-There are several known issues in {productname} 6.5.1.
+There is one known issue in {productname} 6.5.1.
 
 === Untranslated instructions for editor resize handle when using screen readers
 
