DOC-2072: 6.5.1-release-notes.adoc
Corrected number of Advanced Template fixes: was five; is four.

--- a/modules/ROOT/pages/6.5.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.5.1-release-notes.adoc
@@ -232,7 +232,7 @@ For information on the **SpellChecker Pro** plugin, see: xref:introduction-to-ti
 
 The {productname} 6.5.1 release includes an accompanying release of the **Advanced Templates** premium plugin.
 
-**Advanced Templatess** 1.2.0 includes one improvement, one addition, and five fixes:
+**Advanced Templatess** 1.2.0 includes one improvement, one addition, and four fixes:
 
 ==== The Advanced Template UI now provides controls for a preconfigured operations set.
 //#TINY-9756
