--- a/modules/ROOT/partials/events/accordion-events.adoc
+++ b/modules/ROOT/partials/events/accordion-events.adoc
@@ -4,5 +4,5 @@ The following events are provided by the xref:accordion.adoc[Accordion plugin].
 |===
 |Name |Data |Description
 |ToggledAccordion |Passes the state — `+true+` or `~+false+` — and the element. |Fired when an accordion is toggled.
-|ToggledAllAccordion |Passes the state — `+true+`, `~+false+`, or undefined — and all the affected elements. |Fired when all accordions are toggled.
+|ToggledAllAccordions |Passes the state — `+true+`, `~+false+`, or undefined — and all the affected elements. |Fired when all accordions are toggled.
 |===
