--- a/modules/ROOT/pages/6.5.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.5.1-release-notes.adoc
@@ -151,7 +151,7 @@ For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.a
 ==== No longer allow attempting to fix a table’s lack of headers if the table has no cells.
 //#TINY-9753
 
-Previously, the Accessbility Checker plugin assumed a table had at least one row. As a consequence it would, consequent to attempting to produce a user-visible error regarding a table having no header rows, throw an internal error when it checked a table that had no cells at all.
+Previously, the Accessibility Checker plugin assumed a table had at least one row. As a consequence it would, consequent to attempting to produce a user-visible error regarding a table having no header rows, throw an internal error when it checked a table that had no cells at all.
 
 NOTE: this error was sent to the Console but no errors or alerts were presented to end-users.
 
